external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_macro_bang.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/parser/invalid_macro_bang.move:3:17
  │
3 │     fun bar() { foo<u64>!(42) }
  │                 ^^^^^^^^ Expected name to be followed by a brace-enclosed list of field expressions or a parenthesized list of arguments for a function call

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/invalid_macro_bang.move:3:25
  │
3 │     fun bar() { foo<u64>!(42) }
  │                         ^
  │                         │
  │                         Unexpected '!'
  │                         Expected ';'
